[gd_scene load_steps=2 format=3 uid="uid://lcggc762kvjq"]

[ext_resource type="Script" path="res://Menus/main_menu.gd" id="1_yklf1"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yklf1")

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 86.0
offset_top = 11.0
offset_right = 174.0
offset_bottom = 34.0
text = "Main Menu"

[node name="AddIngredient" type="Button" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 52.0
offset_right = 130.0
offset_bottom = 83.0
text = "Add Ingredient"

[node name="AddRecipe" type="Button" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 88.0
offset_right = 101.0
offset_bottom = 119.0
text = "Add Recipe"

[node name="ChangeIngredient" type="Button" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 126.0
offset_right = 158.0
offset_bottom = 157.0
text = "Change Ingredient"

[node name="ChangeRecipe" type="Button" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 164.0
offset_right = 129.0
offset_bottom = 195.0
text = "Change Recipe"

[node name="CalculateCost" type="Button" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 203.0
offset_right = 129.0
offset_bottom = 234.0
text = "Calculate Cost"

[node name="Quit" type="Button" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 552.0
offset_right = 84.0
offset_bottom = 583.0
text = "Exit"

[connection signal="pressed" from="AddIngredient" to="." method="_on_add_ingredient_pressed"]
[connection signal="pressed" from="AddRecipe" to="." method="_on_add_recipe_pressed"]
[connection signal="pressed" from="ChangeIngredient" to="." method="_on_change_ingredient_pressed"]
[connection signal="pressed" from="ChangeRecipe" to="." method="_on_change_recipe_pressed"]
[connection signal="pressed" from="CalculateCost" to="." method="_on_calculate_cost_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
